spacing fix and email add

--- a/public/public/css/app-dev.css
+++ b/public/public/css/app-dev.css
@@ -504,6 +504,7 @@
     position: absolute;
     right: 26px;
     bottom: 0;
+    cursor:default;
 }
 
 .contest-test-result span {
